# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Dockerfile  README.md  devcontainer.json  mise.toml  release-please-config.json
.github/: backend-tests.yaml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
kubernetes/: e2e_test.py  k3d-config.yaml  k8s-setup-minimal  pyproject.toml  setup_cluster_gitops  setup_cluster_local  setup_gitops
kubernetes/manifests/base/backend/: deployment.yaml  service.yaml
kubernetes/manifests/base/frontend/: deployment.yaml  service.yaml
kubernetes/manifests/dev/: kustomization.yaml  namespace.yaml
kubernetes/manifests/dev/backend/: kustomization.yaml
kubernetes/manifests/dev/frontend/: kustomization.yaml
scripts/: setup  setup_deploy_key  setup_project  update_kustomize_tag
src/backend/: .dockerignore  CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/backend/tests/: test_config.py  test_main.py
src/frontend/: .dockerignore  CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
src/frontend/tests/: conftest.py  test_main.py
