[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [
    { name = "tonyspunei", email = "tony@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
study-tracker-backend = "backend.main:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
